# zippy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/fuzz/: Cargo.toml  README.md
core/fuzz/fuzz_targets/: detect.rs  list.rs  safe_join.rs
core/src/: archive.rs  cancel.rs  error.rs  extract.rs  formats.rs  lib.rs  progress.rs  safety.rs  subprocess.rs  tools.rs
core/src/archive/: tests.rs
core/tests/: interop.rs  robustness.rs
data/: README.md  install.sh  io.github.s4rt4.Zippy.desktop  zippy-nautilus.py
data/kde/: zippy-compress.desktop  zippy-extract.desktop
data/thunar/: zippy-uca.xml
docs/: winrar-feature-map.md
frontend-gtk/: Cargo.toml
frontend-gtk/src/: cli.rs  config.rs  file_list.rs  i18n.rs  main.rs  progress.rs  tree.rs  window.rs
integration/: zippy.desktop
integration/kde/: zippy.desktop
integration/nautilus/: zippy_menu.py
integration/thunar/: uca-entry.xml
scripts/: measure.sh  package.sh
