# Zippy — workspace root
# Arsitektur core/frontend split (lihat Planning Doc §2).
[workspace]
members  = ["core", "frontend-gtk"]
resolver = "2"

[workspace.package]
version = "0.0.0"          # Sprint 0 — baseline & scaffold
edition = "2021"
license = "MIT"            # TBD: MIT vs GPL-2.0 (Planning Doc §11.3)
repository = "https://github.com/zippy/zippy"

[workspace.dependencies]
anyhow  = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Profil rilis: utamakan binary kecil & startup cepat (filosofi "ringan").
[profile.release]
opt-level = "z"     # optimize for size
lto       = true
codegen-units = 1
strip     = true
panic     = "abort"
