# Zippy — workspace root
# Arsitektur core/frontend split (lihat Planning Doc §2).
[workspace]
members  = ["core", "frontend-gtk"]
resolver = "2"

[workspace.package]
version = "0.4.0"          # v0.4 — fitur WinRAR (Gelombang 1-3) + folder tree
edition = "2021"
license = "MIT"
repository = "https://github.com/s4rt4/zippy"

[workspace.dependencies]
anyhow  = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Profil rilis: utamakan binary kecil & startup cepat (filosofi "ringan").
[profile.release]
opt-level = "z"     # optimize for size
lto       = true
codegen-units = 1
strip     = true
panic     = "abort"
