[package]
name    = "zippy-core"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Zippy core — pure Rust archive engine (zero UI dependency)"

[lib]
name = "zippy_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace  = true
tracing.workspace = true

# Format native (v0.1 — Sprint 1-3)
zip    = { version = "2", features = ["aes-crypto"] }
tar    = "0.4"
flate2 = "1"
bzip2  = "0.4"
xz2    = "0.1"
zstd   = "0.13"

[dev-dependencies]
tempfile = "3"
