[package]
name    = "zippy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Zippy — archive manager untuk Linux (GTK4 + libadwaita)"

[[bin]]
name = "zippy"
path = "src/main.rs"

[dependencies]
zippy-core = { path = "../core" }

gtk4       = { version = "0.9", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.7", package = "libadwaita", features = ["v1_4"] }

anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
